@@ -1,0 +1,209 @@
+/* XPM */
+static char * file_print_direct_xpm[] = {
+"24 24 182 2",
+"  	c None",
+". 	c #000000",
+"+ 	c #C7C7C7",
+"@ 	c #FAFAFA",
+"# 	c #FCFCFC",
+"$ 	c #FBFBFB",
+"% 	c #F8F8F8",
+"& 	c #AFAFAF",
+"* 	c #F9F9F9",
+"= 	c #E5E5E5",
+"- 	c #E3E3E3",
+"; 	c #E2E2E2",
+"> 	c #E0E0E0",
+", 	c #DFDFDF",
+"' 	c #DCDCDC",
+") 	c #DBDBDB",
+"! 	c #B6B6B6",
+"~ 	c #6B6B6B",
+"{ 	c #676767",
+"] 	c #818181",
+"^ 	c #E7E7E7",
+"/ 	c #606060",
+"( 	c #A0A0A0",
+"_ 	c #DADADA",
+": 	c #E1E1E1",
+"< 	c #B7B7B7",
+"[ 	c #FDFDFD",
+"} 	c #EFEFEF",
+"| 	c #EEEEEE",
+"1 	c #EDEDED",
+"2 	c #ECECEC",
+"3 	c #EBEBEB",
+"4 	c #E9E9E9",
+"5 	c #E8E8E8",
+"6 	c #BFBFBF",
+"7 	c #8A8A8A",
+"8 	c #6A6A6A",
+"9 	c #9E9E9E",
+"0 	c #F6F6F6",
+"a 	c #909090",
+"b 	c #A2A2A2",
+"c 	c #AAAAAA",
+"d 	c #F4F4F4",
+"e 	c #CECECE",
+"f 	c #ADADAD",
+"g 	c #AEAEAE",
+"h 	c #BEBEBE",
+"i 	c #A6A6A6",
+"j 	c #CDCDCD",
+"k 	c #F5F5F5",
+"l 	c #DEDEDE",
+"m 	c #DDDDDD",
+"n 	c #C9C9C9",
+"o 	c #878787",
+"p 	c #888888",
+"q 	c #D0D0D0",
+"r 	c #6E6E6E",
+"s 	c #797979",
+"t 	c #D1D1D1",
+"u 	c #A1A1A1",
+"v 	c #B3B3B3",
+"w 	c #FFFFFF",
+"x 	c #CACACA",
+"y 	c #A7A7A7",
+"z 	c #A5A5A5",
+"A 	c #A4A4A4",
+"B 	c #A3A3A3",
+"C 	c #87847C",
+"D 	c #EAE8E3",
+"E 	c #8D8982",
+"F 	c #53524C",
+"G 	c #807D74",
+"H 	c #AAA9A5",
+"I 	c #BAB5AB",
+"J 	c #F3F3F3",
+"K 	c #919191",
+"L 	c #444444",
+"M 	c #525252",
+"N 	c #767676",
+"O 	c #545454",
+"P 	c #292929",
+"Q 	c #181818",
+"R 	c #424242",
+"S 	c #6F6F6D",
+"T 	c #C3C1BD",
+"U 	c #8B8B89",
+"V 	c #E6E5E1",
+"W 	c #F9F9F8",
+"X 	c #FAFAF9",
+"Y 	c #666665",
+"Z 	c #7B7B7B",
+"` 	c #646464",
+" .	c #111111",
+"..	c #414141",
+"+.	c #171717",
+"@.	c #979797",
+"#.	c #737373",
+"$.	c #0E0E0E",
+"%.	c #010101",
+"&.	c #A4A3A1",
+"*.	c #6C6B6A",
+"=.	c #F5F4F3",
+"-.	c #D5D5D5",
+";.	c #616161",
+">.	c #242424",
+",.	c #696969",
+"'.	c #151515",
+").	c #BABABA",
+"!.	c #D3D3D3",
+"~.	c #0D0D0D",
+"{.	c #030303",
+"].	c #B2B2B2",
+"^.	c #999895",
+"/.	c #6B6B6A",
+"(.	c #E6E4E1",
+"_.	c #F0EEEC",
+":.	c #F7F6F5",
+"<.	c #0C0C0C",
+"[.	c #666666",
+"}.	c #FEFEFE",
+"|.	c #1F1F1F",
+"1.	c #575757",
+"2.	c #020202",
+"3.	c #9C9B99",
+"4.	c #6B6A68",
+"5.	c #585858",
+"6.	c #5E5C57",
+"7.	c #524F4B",
+"8.	c #4A4845",
+"9.	c #343331",
+"0.	c #060606",
+"a.	c #595959",
+"b.	c #C6C6C6",
+"c.	c #808080",
+"d.	c #323232",
+"e.	c #121212",
+"f.	c #949391",
+"g.	c #989694",
+"h.	c #868480",
+"i.	c #6E6C66",
+"j.	c #706D67",
+"k.	c #5C5955",
+"l.	c #484642",
+"m.	c #070706",
+"n.	c #868686",
+"o.	c #333333",
+"p.	c #C8C8C8",
+"q.	c #0C0B0B",
+"r.	c #373636",
+"s.	c #787877",
+"t.	c #7E7B77",
+"u.	c #979690",
+"v.	c #96938D",
+"w.	c #918F87",
+"x.	c #807E77",
+"y.	c #7D7A74",
+"z.	c #54534E",
+"A.	c #080807",
+"B.	c #4F4F4E",
+"C.	c #363635",
+"D.	c #141312",
+"E.	c #7D7D7D",
+"F.	c #040404",
+"G.	c #0B0B0B",
+"H.	c #050505",
+"I.	c #090909",
+"J.	c #F0F0F0",
+"K.	c #5C5C5C",
+"L.	c #8B8880",
+"M.	c #B2AFA8",
+"N.	c #B6B3AD",
+"O.	c #BFBDB6",
+"P.	c #4E4D4A",
+"Q.	c #3D3D3C",
+"R.	c #8B8B8B",
+"S.	c #121211",
+"T.	c #ABA8A2",
+"U.	c #777670",
+"V.	c #040403",
+"W.	c #AAAAA8",
+"X.	c #929292",
+"Y.	c #2F2F2F",
+"                                                ",
+"            . . . . . . . . . . . .             ",
+"          . + @ # # # # # # # $ % & .           ",
+"          . * = - - - ; > , , ' ) ! .           ",
+"          . # ~ { ] ^ / ( _ : > > < .           ",
+"          . [ } | 1 1 | 2 2 3 4 5 6 .           ",
+"          . [ 7 8 9 0 a b 4 c a d + .           ",
+"          . [ # # # # $ $ # # $ $ e .           ",
+"          . [ f g = h % h i j 3 # j .           ",
+"          . k l l l m l l , l 5 : n .           ",
+"        . . @ o ~ p q r s t p u q v . .         ",
+"      . w . x y z A z z i B b u u 9 . C .       ",
+"    . w D E F . . . . . . . . . . G C H I .     ",
+"  . w w J w w w K L L L L M N d : O P Q R S .   ",
+"  . T U V W X W Y P Z Z Z `  ...+.P o @.#.$.%.  ",
+"  . &.*.=.h -.! ;.>.w ,.'.).!.. ~.# A {.].e .   ",
+"  . ^./.(._.:.W g <.w ;.. [.}.{.|.w 1.. %.2..   ",
+"  . 3.4.5.6.7.8.9.0.w ;.. a.w 0.%.b.0 c.d.. e.  ",
+"  . f.g.h.i.j.k.l.m.w n.o.p.e . q.%.r.s.% y %.  ",
+"  . t.u.v.w.x.y.z.A.w b B.C.m.D.. . . . E.w F.  ",
+"    . . . . . . . G.w { H.. . . I.J.K.. s !..   ",
+"    . L.M.N.O.O.P.Q.-.R.S.M.T.U.V.W.) X.n Y.H.  ",
+"      . . . . . . . . . . . . . . . . . . .     ",
+"                                                "};
