@@ -1,22 +1,5 @@
 #include "sp-module-exec.h"
 
-SPModule *
-sp_module_new (unsigned int type, SPRepr *repr)
-{
-	SPModule *module;
-
-	module = g_object_new (type, NULL);
-
-	if (module) {
-		if (repr) sp_repr_ref (repr);
-		module->repr = repr;
-		if (((SPModuleClass *) G_OBJECT_GET_CLASS (module))->build)
-			((SPModuleClass *) G_OBJECT_GET_CLASS (module))->build (module, repr);
-	}
-
-	return module;
-}
-
 SPModuleHandler *
 sp_module_set_exec (SPModule * object, 
 		                           SPModuleHandler * exec) {
