@@ -45,7 +45,7 @@ Sodipodi * sodipodi_application_new (void);
 /* Preference management */
 void sodipodi_load_preferences (Sodipodi * sodipodi);
 void sodipodi_save_preferences (Sodipodi * sodipodi);
-SPRepr *sodipodi_get_repr (Sodipodi *sodipodi, const gchar *key);
+SPRepr *sodipodi_get_repr (Sodipodi *sodipodi, const unsigned char *key);
 
 /* Extension management */
 void sodipodi_load_extensions (Sodipodi *sodipodi);
