@@ -24,6 +24,7 @@ enum {
 	SP_VERB_FILE_SAVE,
 	SP_VERB_FILE_SAVE_AS,
 	SP_VERB_FILE_PRINT,
+	SP_VERB_FILE_PRINT_DIRECT,
 	SP_VERB_FILE_PRINT_PREVIEW,
 	SP_VERB_FILE_IMPORT,
 	SP_VERB_FILE_EXPORT,
